--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
+ROTATE LINE
+
 <!DOCTYPE html>
 
 <html>
@@ -24,18 +26,54 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 		
-        let angle = 0;
-        const line = document.getElementById('line');
-
-        function rotateLine() {
-            angle += 2;
-            line.style.transform = `rotate(${angle}deg)`;
-            setTimeout(rotateLine, 20);
-        }
-
-        rotateLine();
+    
 </script>
 
 </body>
 
 </html>
+<!-- ---------------------------------
+
+css
+
+
+/*  your css code here. If applicable */
+#line {
+
+            position: absolute;
+
+            top: 50%;
+
+            left: 50%;
+
+            width: 200px;
+
+            height: 2px;
+
+            background-color: black;
+
+            transform-origin: center center;
+
+        }
+
+-------------------------------
+
+Js
+
+
+//your JS code here. If required.
+let angle = 0;
+
+        const line = document.getElementById('line');
+
+        function rotateLine() {
+
+            angle += 2;
+
+            line.style.transform = rotate(${angle}deg);
+
+            setTimeout(rotateLine, 20);
+
+        }
+
+        rotateLine(); -->
